--- a/src/components/pages/About/About.css
+++ b/src/components/pages/About/About.css
@@ -118,3 +118,13 @@
     color: #555;
   }
   
+/* =========================
+   📌 Ajustements Responsive pour Home
+========================= */
+
+@media (width <= 768px) {
+  .about-page {
+      margin-top: 100px;
+      padding: 10px;
+  }
+}
