--- a/src/components/pages/LandingPage/LandingPage.css
+++ b/src/components/pages/LandingPage/LandingPage.css
@@ -22,25 +22,15 @@
     border-radius: 8px;
     box-shadow: var(--box-shadow);
     max-width: 900px;
+    display: flex !important;
     flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto 30px;
 }
 
 .landing-header h1 {
     font-size: 2.5rem;
-}
-
-/* =========================
-   📌 Section landing-features
-========================= */
-
-.landing-features {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.landing-features h2 {
-    font-size: 1.8rem;
-    font-weight: bold;
 }
 
 /* ✅ Bouton CTA */
@@ -62,24 +52,32 @@
 }
 
 /* =========================
+   📌 Section landing-features
+========================= */
+
+.landing-features {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.landing-features h2 {
+    font-size: 1.8rem;
+    font-weight: bold;
+}
+
+/* =========================
    📌 Ajustements Responsive pour Landing
 ========================= */
 
 @media (width <= 768px) {
     .landing-page {
-    min-height: 100vh; /* ✅ Assure une hauteur pleine mais sans décalage */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: fixed; /* ✅ Force le modal à rester bien centré */
-    top: 0; /* ✅ Évite tout décalage */
-    left: 0;
-    width: 100%;
+        margin-top: 100px;
+        padding: 10px;
     }
 
     .landing-header {
         max-width: 100%;
-        padding: 30px 20px;
+        padding: 20px;
         margin: 0 auto 30px; /* ✅ Ajustement cohérent avec grand écran */
     }
 
