--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -2,7 +2,7 @@
    📌 Styles généraux de Home
 ========================= */
 
-.home {
+.home-page {
     display: flex;
     flex-direction: column;
     align-items: center;
