--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -116,14 +116,14 @@
 
 @media (width <= 768px) {
     .home-page {
-        margin-top: 100px;
+        margin-top: -65px;
         padding: 10px;
     }
 
     .home-header {
-    max-width: 100%;
-    padding: 30px 20px;
-    margin: 0 auto 30px; /* ✅ Ajustement cohérent avec grand écran */
+        max-width: 100%;
+        padding: 30px 20px;
+        margin: 0 auto 30px; /* ✅ Ajustement cohérent avec grand écran */
     }
 
     .home-header h1 {
@@ -155,6 +155,14 @@
     }
 
     .service-item {
+        flex: 1 1 300px;
         max-width: 100%;
-    }
+        background-color: var(--light-color);
+        padding: 20px; /* ✅ Ajuste le padding pour un bon équilibre */
+        border-radius: 8px;
+        box-shadow: var(--box-shadow);
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+    }  
 }
