--- a/src/components/pages/admin/AdminDashboard/AdminDashboard.css
+++ b/src/components/pages/admin/AdminDashboard/AdminDashboard.css
@@ -16,7 +16,7 @@
   ========================= */
 
 .admin-dashboard-header {
-  background-color: var(--primary-color);
+  background-color: var(white);
   color: var(--light-color);
   padding: 40px 30px;
   border-radius: 8px;
