--- a/src/components/pages/admin/UserManager/UserManager.css
+++ b/src/components/pages/admin/UserManager/UserManager.css
@@ -16,7 +16,7 @@
   ========================= */
 
   .user-manager-header {
-    background-color: var(--primary-color);
+    background-color: var(white);
     color: var(--light-color);
     padding: 40px 30px;
     border-radius: 8px;
