correction footer admindashboard et usermanager

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -35,6 +35,10 @@ body, .layout {
   padding-top: 520px;
 }
 
+.footer {
+  margin-top: 20px;
+}
+
 @media (width <= 768px) {
   .page-with-header {
     padding-top: 1260px;
