--- a/src/components/partiels/Menu/Menu.css
+++ b/src/components/partiels/Menu/Menu.css
@@ -1,67 +1,4 @@
 /* =========================
-   📌 Variables globales
-========================= */
-:root {
-  --header-height: 80px;
-}
-
-/* =========================
-   📌 Layout Général
-========================= */
-body,
-.layout {
-  background-color: white !important;
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-
-.layout {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  width: 100vw;
-}
-
-.content-container {
-  width: 100%;
-  max-width: 1200px;
-  padding: 20px;
-  box-sizing: border-box;
-  margin: 0 auto;
-  background-color: transparent !important;
-  flex-grow: 1;
-}
-
-.main.page-with-header {
-  padding-top: var(--header-height);
-}
-
-.page-no-header {
-  padding-top: 0 !important;
-}
-
-.footer {
-  margin-top: 20px;
-}
-
-@media (width <= 768px) {
-  .main.page-with-header {
-    padding-top: calc(var(--header-height) + 20px);
-  }
-}
-
-
-.menu-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  max-width: 1200px;
-  padding: 0 20px;
-}
-
-/* =========================
    📌 Menu Principal
 ========================= */
 .menu {
@@ -135,7 +72,7 @@ body,
   max-width: 200px;
   width: 200px;
   background-color: var(--primary-back-color);
-  border: 1px solid #ddd;
+  border: 1px solid var(--border-color);
   padding: 5px;
   box-shadow: var(--box-shadow);
   z-index: 1000;
@@ -175,7 +112,7 @@ body,
   top: calc(100% + 8px);
   right: 0;
   background-color: var(--primary-back-color);
-  border: 1px solid #ddd;
+  border: 1px solid var(--border-color);
   box-shadow: var(--box-shadow);
   border-radius: 5px;
   padding: 8px;
